Update Project Final

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "cypress-cucumber-preprocessor": {
    "nonGlobalStepDefinitions": false,
-   "step_definitions": "cypress/e2e/cucumber/Tests"
+   "step_definitions": "cypress/e2e/steps"
  }
 }
